--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "Ben Marshall",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bmarshall511/frontend.github.io.git/issues"
+    "url": "https://github.com/bmarshall511/frontend/issues"
   },
-  "homepage": "https://github.com/bmarshall511/frontend.github.io.git#readme",
+  "homepage": "https://github.com/bmarshall511/frontend#readme",
   "devDependencies": {
     "compass-options": "^0.1.1",
     "gulp": "^3.9.1",
