--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A light-weight, skeleton frontend framework.",
   "main": "README.md",
   "scripts": {
@@ -25,6 +25,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.0.13",
     "gulp-compass": "^2.1.0",
+    "gulp-complexity": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
