--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.1",
     "jshint": "^2.9.4",
