--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.1",
     "jshint": "^2.9.4",
