--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: ruby
-node_js:
-  - 7.1.0
-install:
-  - bundle install
-  - npm install
-  - gulp setup
-script: gulp
 rvm:
   - 2.0.0
+env:
+  - TRAVIS_NODE_VERSION="4"
+install:
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - npm install
+  - bundle install
+  - gulp setup
+script:
+  - gulp
+
