--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "frontendbyben",
   "version": "3.0.0",
   "description": "A light-weight frontend framework for any project.",
   "repository": "https://github.com/bmarshall511/frontend",
