--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-complexity": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
@@ -55,6 +56,7 @@
     "gulp-scss-lint": "^0.4.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.1",
+    "gulp-uncss": "^1.0.6",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1"
   }
