--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cached": "^1.1.1",
     "gulp-clean-css": "^3.0.4",
     "gulp-compass": "^2.1.0",
     "gulp-complexity": "^0.3.2",
@@ -51,6 +52,8 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-scss-lint": "^0.4.0",
