--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-uncss": "^1.0.6",
     "kss": "^3.0.0-beta.18"
   }
 }
