--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
-    "kss": "^3.0.0-beta.18"
+    "kss": "^3.0.0-beta.18",
+    "yargs": "^8.0.2"
   }
 }
