--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "gulp-clean-css": "^3.4.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-cond": "^1.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if-else": "^1.0.3",
     "gulp-imagemin": "^3.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
