Fixed npm publish error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "frontendbyben",
   "version": "4.0.0",
   "description": "A light-weight frontend framework for any project.",
   "main": "index.js",
