--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "compass-options": "^0.1.1",
+    "css-loader": "^0.28.4",
     "del": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-react": "^7.0.1",
@@ -68,6 +69,7 @@
     "gulp-scss-lint": "^0.4.0",
     "gulp-uncss": "^1.0.6",
     "kss": "^3.0.0-beta.18",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-stream": "^3.2.0",
     "yargs": "^8.0.2"
