--- a/package.json
+++ b/package.json
@@ -44,18 +44,14 @@
   },
   "homepage": "https://github.com/bmarshall511/frontend#readme",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "compass-options": "^0.1.1",
-    "css-loader": "^0.28.4",
     "del": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-react": "^7.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.4.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
@@ -66,12 +62,9 @@
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.6.1",
     "gulp-scss-lint": "^0.4.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
-    "json-loader": "^0.5.4",
     "kss": "^3.0.0-beta.18",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-stream": "^3.2.0",
     "yargs": "^8.0.2"
   }
 }
