--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jquery": true
   },
   "extends": "eslint:recommended",
   "rules": {
