Drupal 7 component updates

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/bmarshall511/slider-menu.jquery.js/issues",
+    "url": "https://github.com/bmarshall511/frontend/issues",
     "email": "me@benmarshall.me"
   },
   "homepage": "https://github.com/bmarshall511/frontend#readme",
