--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
   - npm install
   - bundle install
+before_script:
+  - npm install -g gulp-cli
 script:
   - gulp
   - gulp --prod
