--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "compass-options": "^0.1.1",
     "del": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
@@ -53,19 +56,19 @@
     "foundation-sites": "^6.4.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.4.1",
     "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.6.1",
     "gulp-cond": "^1.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
+    "gulp-util": "^3.0.8",
     "kss": "^3.0.0-beta.18",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "yargs": "^8.0.2"
   }
 }
