--- a/package.json
+++ b/package.json
@@ -67,9 +67,12 @@
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
+    "jquery": "^3.2.1",
     "kss": "^3.0.0-beta.18",
+    "run-sequence": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "what-input": "^5.0.1",
     "yargs": "^8.0.2"
   }
 }
