--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
@@ -69,6 +70,7 @@
     "gulp-util": "^3.0.8",
     "jquery": "^3.2.1",
     "kss": "^3.0.0-beta.18",
+    "motion-ui": "^1.2.3",
     "run-sequence": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
