--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gulp-util": "^3.0.8",
     "jquery": "^3.2.1",
     "kss": "^3.0.0-beta.18",
+    "michelangelo": "^0.6.1",
     "motion-ui": "^1.2.3",
     "run-sequence": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
