--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "compass-options": "^0.1.1",
@@ -65,6 +66,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
@@ -72,6 +74,8 @@
     "kss": "^3.0.0-beta.18",
     "michelangelo": "^0.6.1",
     "motion-ui": "^1.2.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "run-sequence": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
