--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp watch"
+    "start": "webpack --env development",
+    "build": "webpack --env production",
+    "lint:js": "eslint src/js/ webpack.*.js --cache"
   },
   "repository": {
     "type": "git",
@@ -45,13 +47,14 @@
   "homepage": "https://github.com/bmarshall511/frontend#readme",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
     "compass-options": "^0.1.1",
     "del": "^3.0.0",
+    "eslint": "^4.8.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-react": "^7.0.1",
     "foundation-sites": "^6.4.1",
@@ -60,12 +63,10 @@
     "gulp-clean-css": "^3.4.1",
     "gulp-compass": "^2.1.0",
     "gulp-cond": "^1.0.0",
-    "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-scss-lint": "^0.4.0",
-    "gulp-sourcemaps": "^2.6.1",
     "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
@@ -77,8 +78,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "run-sequence": "^2.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.0",
     "what-input": "^5.0.1",
     "yargs": "^8.0.2"
   }
